--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="c8s7l47bx289m8o"></script><style type="text/css">  @-webkit-keyframes rotate {
+    <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="t55csqhf6ueo4l9"></script><style type="text/css">  @-webkit-keyframes rotate {
     from  { -webkit-transform: rotate(0deg); }
     to   { -webkit-transform: rotate(360deg); }
   }
