--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         multiselect: false, // true or false
         extensions: ['.png', '.jpg'],
     };
-    Dropbox.choose(options);
+    //Dropbox.choose(options);
     var button = Dropbox.createChooseButton(options);
     document.getElementById("dropbox-container").appendChild(button);
 
