--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
     <div class="row">
       <div class="small-12 columns">
         <h1>Dropbox Chooser Demo</h1>
-<!--         <div id="dropbox-container">
+        <div id="dropbox-container">
           <a href="#" class=" dropbox-dropin-btn dropbox-dropin-default"><span class="dropin-btn-status"></span>Choose from Dropbox</a>
-        </div>  -->
+        </div> 
         <ul id="img_list" class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
         </ul>
       </div>
